--- a/src/app/components/general/contentbox/contentbox.component.scss
+++ b/src/app/components/general/contentbox/contentbox.component.scss
@@ -19,17 +19,20 @@
             grid-area: title;
             padding: 0 variables.$elem-padding;
             color: variables.$fontcolor1;
+
             @include screens.mobile-screen {
                 overflow-wrap: anywhere;
             }
+
             @include screens.tablet-screen {
                 overflow-wrap: anywhere;
             }
         }
 
         &.notactive {
-            grid-template-columns: variables.$elem-height 1fr min-content variables.$elem-height;
+            grid-template-columns: variables.$elem-height 1fr min-content min-content;
             grid-template-areas: "image title link arrow";
+
             & .previewImg {
                 grid-area: image;
             }
@@ -39,8 +42,9 @@
             }
 
             @include screens.mobile-screen {
-                grid-template-columns: variables.$elem-height 1fr variables.$elem-height;
+                grid-template-columns: variables.$elem-height 1fr min-content;
                 grid-template-areas: "image title arrow";
+
                 & app-button {
                     display: none;
                 }
