--- a/src/app/components/general/skills/skill-item/skill-item.component.html
+++ b/src/app/components/general/skills/skill-item/skill-item.component.html
@@ -1,7 +1,7 @@
 <div [class]="
     (showPercent ? 'percent-' + skill.knowledgepercent: '')+' flex-row-nojust pill skill-item'">
-  <app-tooltip [name]=" skillText" [icon]="skill.icon" [description]="skill.description" [direction]="direction.TOP"
-    [link]="
+  <app-tooltip [name]="(showPercent ? skill.knowledgepercent+'% ' : '')+skill.name" [icon]="skill.icon"
+    [description]="skill.description" [direction]="direction.TOP" [link]="
     skill.url
       ? {
           id: 'link_for_' + skill.identifier,
@@ -31,6 +31,7 @@
         : 'skill-title-container'
     ">
     <img class="skill-icon small-image" src="{{ skill.icon.path }}" alt="{{ skill.icon.alt }}" loading="lazy" />
-    <p class="skill-title">{{ skillText }}</p>
+    <span *ngIf="showPercent">{{skill.knowledgepercent}}%&nbsp;</span>
+    <span class="skill-title"> {{ skill.name }}</span>
   </div>
 </div>
