started zoom in on imgs

--- a/src/app/components/general/image/image.component.html
+++ b/src/app/components/general/image/image.component.html
@@ -1,4 +1,29 @@
-<div *ngIf="isNotSVG" class="img-bg">
-  <div [ngStyle]="loaded ? { 'background-image': 'url(' + image.path + ')' } : {}"></div>
+<div *ngIf="isNotSVG && !isZoomedIn" class="img-bg">
+  <div
+    [ngStyle]="loaded ? { 'background-image': 'url(' + image.path + ')' } : {}"
+  ></div>
 </div>
-<img src="{{ image.path }}" alt="{{ image.alt }}" loading="lazy" />
+<img
+  src="{{ image.path }}"
+  alt="{{ image.alt }}"
+  loading="lazy"
+  (mouseenter)="hovering = true"
+  (mouseleave)="hovering = false"
+  [class]="isZoomedIn ? 'zoomedIn' : ''"
+/>
+<img
+  *ngIf="!isZoomedIn && hovering"
+  (click)="isZoomedIn = !isZoomedIn"
+  [class]="'preview-image zoomIcon'"
+  [src]="zoomInIcon.path"
+  [alt]="zoomInIcon.alt"
+  loading="lazy"
+/>
+<img
+  *ngIf="isZoomedIn && hovering"
+  (click)="isZoomedIn = !isZoomedIn"
+  [class]="'preview-image zoomIcon'"
+  [src]="zoomOutIcon.path"
+  [alt]="zoomOutIcon.alt"
+  loading="lazy"
+/>
