--- a/src/app/components/general/image/image.component.scss
+++ b/src/app/components/general/image/image.component.scss
@@ -18,7 +18,7 @@
         //border-radius: variables.$elem-border-radius;
         z-index: variables.$below-bottom;
 
-        &>div {
+        & > div {
             width: 100%;
             height: 100%;
             background-size: cover;
@@ -32,5 +32,24 @@
     & img {
         @include main-image;
         z-index: variables.$bottom;
+        &.zoomedIn {
+            position: fixed;
+            width: 90vw;
+            margin: 5vw auto;
+            & .zoomIcon {
+                width: variables.$elem-height * 2;
+                height: variables.$elem-height * 2;
+                opacity: 0.8;
+                position: fixed;
+                margin: auto;
+            }
+        }
+    }
+    & .zoomIcon {
+        width: variables.$elem-height;
+        height: variables.$elem-height;
+        opacity: 0.8;
+        position: absolute;
+        margin: auto;
     }
 }
