--- a/src/app/components/general/select/select.component.scss
+++ b/src/app/components/general/select/select.component.scss
@@ -7,12 +7,20 @@
     position: relative;
     border-top: variables.$defborderthin;
 
+    & .showTags {
+        padding: calc(variables.$elem-padding / 2) variables.$elem-padding;
+    }
+
+    & p {
+        font-family: variables.$mono;
+    }
+
     & .tags {
         z-index: variables.$highest;
         position: absolute;
         background-color: variables.$cool;
         width: 100%;
-        border-left: variables.$defborderthin;
+        //border-left: variables.$defborderthin;
 
         //border-right: variables.$defborderthin;
         & .tag {
@@ -20,9 +28,13 @@
                 display: inline-block;
             }
 
+            &:last-child {
+                margin-bottom: variables.$elem-padding;
+            }
+
             border-left: variables.$defborderthin;
-            margin-top: variables.$elem-padding;
-            margin-left: variables.$thin;
+            margin: variables.$elem-padding;
+            margin-bottom: 0;
             cursor: pointer;
 
             &.active {
